# nix-config

./: .env  .gitignore  CLAUDE.md  README.md  TODO.org  constants.nix  docker-compose.yaml  flake.nix  home.nix  infrastructure.org  treefmt.nix
.claude/: settings.local.json
caddy/: Caddyfile
darwin/: common.nix  home-manager.nix  homebrew.nix  linux-builder.nix  litestream-garmin.yml  mythique.nix
docker/: Dockerfile
healthcheck/: .gitignore  SPEC.md  check.py
home-manager/: aws.nix  bin.nix  darwin.nix  dotfiles.nix  garmindb.nix  gcloud.nix  home.nix  hugo-servers.nix  jupyterlab.nix  laptop.nix  litestream.nix  local-caddy.nix  mythique.nix  nelhage.com.nix  nomadique.nix  obsidian-scan.nix  obsidian-sync.nix  sync.nix  tailscale-completion.nix
hw4.nelhage.com/: configuration.nix  disk-config.nix  flake.nix  hardware-configuration.nix
lib/: build-uv-package.nix
modules/: agenix.nix  avd-vm.nix  common.nix  darwin-vm.nix  dev-pkgs.nix  garmindb.nix  home.nix  nelhage.com.nix  nix-docsets.nix  nixos.nix  oauth2-proxy.nix  pin-nixpkgs.nix  vm-base.nix
mythique/: flake.nix  home.nix
pkgs/: base16-shell.nix  hugo-pinned.nix
secrets/: GarminConnectConfig.json.age  garmin.password.age  gcp-service.json.age  hw4-aws-credentials.age  hw4-gcloud.json.age  jupyter-auth.age  jupyter-password.age  nelhage-services.age  oauth2-proxy.env.age  secrets.nix
shells/: cpython.nix  dav1d.nix  livegrep.nix  (+10 more)
src/obsidian-scan/: .envrc  Cargo.toml  README.md  default.nix
src/obsidian-scan/emacs/: obsidian-scan.el
src/obsidian-scan/src/: frontmatter.rs  main.rs
(+89 files in other folders)
