[package]
name = "obsidian-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.11.1"
saphyr = "0.0.3"
serde = {version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
walkdir = "2.5.0"
